--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -42,14 +42,13 @@ header {
 
   background-color: oklch(from var(--white) l c h);
 }
-
-.header__menu ul{
+.header__navigation ul{
     display: flex;
     flex-direction: row;
     gap: 40px;
     list-style-type: none;
 }
-.header__menu a:hover{
+.header__navigation a:hover{
     color: oklch(from var(--brand-primary)l c h);
 }
 .header__login{
@@ -70,7 +69,7 @@ footer{
     color: oklch(from var(--white)l c h);
     background: linear-gradient(#ececec, #b9b9b9);
 
-    padding: 50px 100px;
+    padding: 20px 100px;
 
     font-size: 26px;
 }
@@ -82,4 +81,10 @@ footer h2{
     gap: 160px;
     justify-content: space-around;
     margin: 0 auto;
+
+    height: 446px;
+}
+.map{
+    width: 400px;
+    height: 400px;
 }
