--- a/src/assets/css/layer.css
+++ b/src/assets/css/layer.css
@@ -336,3 +336,171 @@ h2{
     .register-btn:hover {
       background: oklch(from var(--brand-primary)l c h);
     }
+
+    /* personal-page */
+
+    .personal-page-container{
+        display: flex;
+        margin: 50px;
+        margin-left: 30px;
+        gap: 100px;
+    }
+    .personal {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        width: 320px;
+        height: 224px;
+        align-items: center;
+        justify-content: center;
+        
+        background-color: oklch(from var(--light-gray)l c h);
+        padding: 8px;
+        border-radius: 8px;
+    }
+    .personal a{
+        background-color: oklch(from var(--white)l c h);
+        border-radius: 8px;
+        padding: 8px 110px;
+    }
+    .personal a:hover{
+        background-color: oklch(from var(--dark-gray)l c h);
+        color: oklch(from var(--white)l c h);
+    }
+    .personal-info{
+        display: flex;
+        align-items: center;
+        gap: 24px;
+    }
+    .personal-info img{
+        height: 90px;
+        width: 90px;
+        border-radius: 100%;
+    }
+    .personal-info__data {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+    }
+    .personal-actions{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+    .personal-actions h3{
+        font-size: 24px;
+        font-weight: 500;
+    }
+    .purchase-card {
+      width: 320px;
+      height: 210px;
+      border-radius: 16px;
+      overflow: hidden;
+      position: relative;
+      background: oklch(from var(--white)l c h);
+    }
+    .purchase-card img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+    }
+    .delivered-label {
+      position: absolute;
+      left: 0;
+      top: 50%;
+      width: 100%;
+      transform: translateY(-50%);
+      background: oklch(from var(--brand-primary)l c h/70%);
+      color: oklch(from var(--white)l c h);
+      text-align: center;
+      font-size: 28px;
+      padding: 12px 0;
+      font-weight: 400;
+      letter-spacing: 1px;
+    }
+    .purchases-container{
+        display: flex;
+        gap: 35px;
+        justify-content: left;
+    }
+    .my-reviews{
+        display: flex;
+        flex-direction: column;
+        justify-content: left;
+        gap: 32px;
+    }
+    .my-review{
+        display: flex;
+        gap: 30px;
+    }
+    .my-review img{
+        width: 135px;
+        border-radius: 10px;
+    }
+    .my-review h4{
+        color: oklch(from var(--brand-primary)l c h);
+    }
+    .my-review p{
+        width: 260px;
+        color: oklch(from var(--dark-gray)l c h);
+    }
+    .admin-info{
+        background-color: oklch(from var(--brand-primary)l c h/50%);
+    }
+    .content-management {
+        color: oklch(from var(--dark-gray)l c h);
+        list-style-type: none;
+        text-decoration: underline;
+
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+    }
+    .okorno{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 30px;
+    }
+    .order{
+        display: flex;
+        flex-direction: column;
+        gap: 70px;
+        align-items: center;
+    }
+    .order h3{
+        color: oklch(from var(--brand-primary)l c h);
+        font-size: 32px;
+        font-weight: 600;
+    }
+    .order a{
+        color: oklch(from var(--white)l c h);
+        background-color: oklch(from var(--brand-primary)l c h);
+        font-size: 24px;
+        padding: 16px 32px;
+        border-radius: 10px;
+    }
+    .order a:hover{
+        color: oklch(from var(--white)l c h);
+        background-color: oklch(from var(--dark-gray)l c h);
+    }
+    .order__info{
+        display: flex;
+        gap: 50px;
+        img{
+            width: 465px;
+            height: 306px;
+            border-radius: 15px;
+        }
+    }
+    .order__info-container {
+        width: 400px;
+        height: 256px;
+        font-size: 24px;
+        line-height: 1.5;
+    }
+    .order__info-container p{
+        color: oklch(from var(--dark-gray)l c h);
+        font-size: 20px;
+    }
